--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Testing out a three.js app</title>
+		<title>endless dance</title>
 		<style>
 			body { margin: 0; }
 			canvas { display: block; }
