--- a/index.html
+++ b/index.html
@@ -12,12 +12,14 @@
 		<div id="msgcontainer">
 			<h1 id="name"><span id="firstname">TAMJEED</span> <span id="lastname">AZAD</span></h1>
 			<p id="bio">
+				<span id="links">
 				<span class="about"><a href="https://www.google.com">about </a></span>
-				<span class="github"><a href="https://www.google.com">github </a></span>
-				<span class="projects"><a href="https://www.google.com">projects </a></span>
-				<span class="linkedin"><a href="https://www.google.com">linkedin </a></span>
-				<span class="about"><a href="https://www.google.com">at </a></span>
+				<span class="github"><a href="https://github.com/tamjazad">github </a></span>
+				<span class="resume"><a href="https://www.google.com">resume </a></span>
+				<span class="linkedin"><a href="https://www.linkedin.com/in/tamjazad/">linkedin </a></span>
+			</span>
 			</p>
+			<p id="bio"><a id="email" href="mailto:ta2553@columbia.edu">ta2553@columbia.edu</a></p>
 		</div>
 	</body>
 </html>
