finished final prototype

--- a/about.html
+++ b/about.html
@@ -4,13 +4,20 @@
   <head>
     <meta charset="utf-8">
     <title>tamjeed azad</title>
-    <style>
-      body { margin: 0; }
-      canvas { display: block; }
-    </style>
+    <link rel="stylesheet" type="text/css" href="about.css">
   </head>
   <body>
     <script src="three.js"></script>
     <script src="about.js"></script>
+    <div id="msgcontainer">
+      <p id="bio"><a href="index.html">return home</a></p>
+  		<p id="bio">
+        I'm a rising junior at columbia university,
+        and I'm majoring in cs and minoring in econ (seas '22). my hometown is chattanooga, tennessee.
+        I have strong interests in machine learning and computational biology research,
+        but I also find full-stack development pretty fun.
+        I'm an avid soccer fan, like to go on runs, and am in a tight-knit family of four.
+      </p>
+    </div>
   </body>
 </html>
