--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>tamjeed azad</title>
     <link rel="stylesheet" type="text/css" href="about.css">
   </head>
@@ -10,13 +11,12 @@
     <script src="three.js"></script>
     <script src="about.js"></script>
     <div id="msgcontainer">
-      <p id="bio"><a href="index.html">return home</a></p>
-  		<p id="bio">
-        I'm a rising junior at columbia university,
-        and I'm majoring in cs and minoring in econ (seas '22). my hometown is chattanooga, tennessee.
-        I have strong interests in machine learning and computational biology research,
-        but I also find full-stack development pretty fun.
-        I'm an avid soccer fan, like to go on runs, and am in a tight-knit family of four.
+      <p id="bio"><a href="index.html" id="links">return home</a>
+        i'm a rising junior at columbia university,
+        majoring in cs and minoring in econ.
+        i'm currently exploring interests in machine learning and creative web dev.
+        hobbywise, i'm an avid soccer fan and am always going on long distance runs.
+
       </p>
     </div>
   </body>
