new file structure

--- a/atom2/atom2.html
+++ b/atom2/atom2.html
@@ -5,13 +5,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>tamjeed azad</title>
-    <link rel="stylesheet" type="text/css" href="about.css">
+    <link rel="stylesheet" type="text/css" href="atom2.css">
   </head>
   <body>
-    <script src="three.js"></script>
-    <script src="atom3.js"></script>
+    <script src="../three.js"></script>
+    <script src="atom2.js"></script>
     <div id="msgcontainer">
-
+      <p id="bio"><a href="index.html" id="links">return home</a>
+      </p>
     </div>
   </body>
 </html>
