changing titles of atom pages

--- a/atom3/atom3.html
+++ b/atom3/atom3.html
@@ -4,14 +4,13 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>tamjeed azad</title>
+    <title>atom 3</title>
     <link rel="stylesheet" type="text/css" href="about.css">
   </head>
   <body>
     <script src="../three.js"></script>
     <script src="atom3.js"></script>
     <div id="msgcontainer">
-
     </div>
   </body>
 </html>
