--- a/atom1/atom1.html
+++ b/atom1/atom1.html
@@ -3,7 +3,8 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>tamjeed azad</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>atom 1</title>
 		<link rel="stylesheet" type="text/css" href="atom1.css">
 	</head>
 	<body>
