--- a/atom2/atom2.html
+++ b/atom2/atom2.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>tamjeed azad</title>
+    <title>atom 2</title>
     <link rel="stylesheet" type="text/css" href="atom2.css">
   </head>
   <body>
